SERVER-11241: Updates allow creating $id/$ref/$db prefixed fields